--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "firebase": "^11.6.1",
     "motion": "^12.10.0",
     "react": "^19.1.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.0",
+    "react-use": "^17.6.0",
     "tailwindcss": "^4.1.5",
+    "use-sound": "^5.0.0",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
