--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.5",
     "firebase": "^11.6.1",
+    "jspdf": "^3.0.1",
     "motion": "^12.10.0",
     "react": "^19.1.0",
     "react-confetti": "^6.4.0",
