--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.5",
+    "bcryptjs": "^3.0.2",
     "firebase": "^11.6.1",
     "jspdf": "^3.0.1",
     "motion": "^12.10.0",
